# amazon-bedrock-agentcore-samples

01-tutorials/01-AgentCore-runtime/03-advanced-concepts/06-middleware-support/: Dockerfile  middleware_support.ipynb
02-use-cases/A2A-multi-agent-graph-router-research-assistant/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
02-use-cases/A2A-multi-agent-graph-router-research-assistant/agents/: __init__.py  analysis_agent.py  research_agent.py  writer_agent.py
02-use-cases/A2A-multi-agent-graph-router-research-assistant/demo/: run_demo.py
02-use-cases/A2A-multi-agent-graph-router-research-assistant/deployment/: README.md  agentcore_analysis.py  agentcore_research.py  agentcore_supervisor.py  agentcore_writer.py  cleanup.py  deploy.py  main.py  serve_analysis.py  serve_research.py  serve_writer.py  sigv4_auth.py
02-use-cases/A2A-multi-agent-graph-router-research-assistant/graph/: __init__.py  conditions.py  router_agent.py  supervisor_graph.py
02-use-cases/A2A-multi-agent-graph-router-research-assistant/images/: architecture.excalidraw
